--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   provider: ^4.3.3
   intl: ^0.16.1
   http: ^0.12.0+2
+  shared_preferences: ^2.0.5
 
 dev_dependencies:
   flutter_test:
