--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   path_provider: ^2.0.1
   path: ^1.8.0
   sqflite: ^2.0.0+3
+  location: ^4.1.1
 
 dev_dependencies:
   flutter_test:
