--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
     <application
         android:icon="@mipmap/ic_launcher"
         android:label="great_places_app">
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyBC4Rzr3TTRqBREV579jEGqWxDILH9RkmI"/>
         <activity
             android:name=".MainActivity"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
