--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   path: ^1.8.0
   sqflite: ^2.0.0+3
   location: ^4.1.1
+  google_maps_flutter: ^2.0.3
 
 dev_dependencies:
   flutter_test:
