--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_auth: ^1.1.0
+  firebase_core: ^1.0.3
   google_sign_in: ^5.0.1
   cloud_firestore: ^1.0.4
   firebase_storage: ^8.0.3
