--- a/.gitignore
+++ b/.gitignore
@@ -23,12 +23,14 @@
 
 # Flutter/Dart/Pub related
 **/doc/api/
+**/ios/Flutter/.last_build_id
 .dart_tool/
 .flutter-plugins
+.flutter-plugins-dependencies
 .packages
 .pub-cache/
 .pub/
-build/
+/build/
 
 # Android related
 **/android/**/gradle-wrapper.jar
@@ -880,6 +882,7 @@ DerivedData/
 
 
 ### Flutter Generated Exceptions
+.flutter-plugins-dependencies
 
 # Exceptions to above rules.
 !**/ios/**/default.mode1v3
