--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   image_picker: ^0.7.4
   cached_network_image: ^3.0.0
   intl: ^0.17.0
+  firebase_messaging: ^9.1.4
 
 dev_dependencies:
   flutter_test:
